# xdotool

./: .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  globals.html  index.html  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.github/workflows/: memcheck.yml
assets/js/: search.js
classes/: _index_.xdotoolasync.html
enums/: _index_.ixdosearchrequire.html
interfaces/: _index_.imouselocation.html  _index_.imovemouseoptions.html  _index_.ixdosearch.html  _index_.ixdotool.html  _index_.ixdoviewportdimensions.html  _index_.xdotool.html
modules/: _index_.html
src/: ClassCreator.h  Keyboard.cpp  Keyboard.h  ResourceManager.cpp  ResourceManager.h  Screenshooter.cpp  Screenshooter.h  TypeConverter.cpp  TypeConverter.h  XService.cpp  XService.h  XTask.cpp  XTask.h  XTypeConverter.cpp  XTypeConverter.h  XdoTool.cpp  XdoTool.h  XdoToolTask.cpp  XdoToolTask.h  XdoToolTaskWorker.cpp  XdoToolTaskWorker.h  main.cpp  xdo_c.h
src/tasks/: ActivateWindow.cpp  ActivateWindow.h  EnterText.cpp  EnterText.h  GetActiveKeysToKeycodeList.cpp  GetActiveKeysToKeycodeList.h  GetFocusedWindow.cpp  GetFocusedWindow.h  GetImage.cpp  GetImage.h  GetMouseLocation.cpp  GetMouseLocation.h  GetViewportDimensions.cpp  GetViewportDimensions.h  GetWindowPID.cpp  GetWindowPID.h  GetWindowProperty.cpp  GetWindowProperty.h  GetWindowSize.cpp  GetWindowSize.h  MoveMouse.cpp  MoveMouse.h  QueryKeymap.cpp  QueryKeymap.h  SearchWindows.cpp  SearchWindows.h  SendKeysequence.cpp  SendKeysequence.h  Sync.cpp  Sync.h  WindowHasProperty.cpp  WindowHasProperty.h
test/: keylogger.ts  keysequence.ts  run.sh  test.ts  tsconfig.json
typescript/: AsyncWrapper.ts  Keyboard.ts  Screenshooter.ts  index.d.ts  index.ts  tsconfig.json  xdo.ts
valgrind/: memcheck.js  node.supp  run-valgrind.sh
